tests/ui/derive_enum.stderr
error: Struple may only be derived on structs
 --> tests/ui/derive_enum.rs:3:10
  |
3 | #[derive(Struple)]
  |          ^^^^^^^
  |
  = note: this error originates in the derive macro `Struple` (in Nightly builds, run with -Z macro-backtrace for more info)
